--- a/M3W2D1-ssgeek-exercises-pair/SSGeek/Web.config
+++ b/M3W2D1-ssgeek-exercises-pair/SSGeek/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="SSGeek" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ssgeek;User ID=te_student;Password=sqlserver1"/>
+    <add name="SSGeek" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=ssgeek; Integrated Security = True"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
