working on tests

--- a/M3W3D4-csharp-capstone/Capstone.Web.Tests/Capstone.Web.Tests.csproj
+++ b/M3W3D4-csharp-capstone/Capstone.Web.Tests/Capstone.Web.Tests.csproj
@@ -85,6 +85,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeControllerTests.cs" />
+    <Compile Include="DAL\ParkSqlDALTests.cs" />
+    <Compile Include="DAL\WeatherSqlDALTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
