--- a/M3W3D4-csharp-capstone/Capstone.Web/Capstone.Web.csproj
+++ b/M3W3D4-csharp-capstone/Capstone.Web/Capstone.Web.csproj
@@ -108,6 +108,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\img\backpack.png" />
+    <Content Include="Content\img\backpack2.jpg" />
+    <Content Include="Content\img\geek.png" />
+    <Content Include="Content\img\logo.png" />
+    <Content Include="Content\img\parks\cvnp.jpg" />
+    <Content Include="Content\img\parks\enp.jpg" />
+    <Content Include="Content\img\parks\gcnp.jpg" />
+    <Content Include="Content\img\parks\gnp.jpg" />
+    <Content Include="Content\img\parks\gsmnp.jpg" />
+    <Content Include="Content\img\parks\gtnp.jpg" />
+    <Content Include="Content\img\parks\mrnp.jpg" />
+    <Content Include="Content\img\parks\rmnp.jpg" />
+    <Content Include="Content\img\parks\ynp.jpg" />
+    <Content Include="Content\img\parks\ynp2.jpg" />
+    <Content Include="Content\img\scenery.png" />
+    <Content Include="Content\img\weather\cloudy.png" />
+    <Content Include="Content\img\weather\partlyCloudy.png" />
+    <Content Include="Content\img\weather\rain.png" />
+    <Content Include="Content\img\weather\snow.png" />
+    <Content Include="Content\img\weather\sunny.png" />
+    <Content Include="Content\img\weather\thunderstorms.png" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -132,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="DAL\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Home\" />
     <Folder Include="Views\Shared\" />
