--- a/M3W3D4-csharp-capstone/Capstone.Web/Capstone.Web.csproj
+++ b/M3W3D4-csharp-capstone/Capstone.Web/Capstone.Web.csproj
@@ -108,6 +108,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\img\backpack.png" />
+    <Content Include="Content\img\backpack2.jpg" />
+    <Content Include="Content\img\geek.png" />
+    <Content Include="Content\img\logo.png" />
+    <Content Include="Content\img\parks\cvnp.jpg" />
+    <Content Include="Content\img\parks\enp.jpg" />
+    <Content Include="Content\img\parks\gcnp.jpg" />
+    <Content Include="Content\img\parks\gnp.jpg" />
+    <Content Include="Content\img\parks\gsmnp.jpg" />
+    <Content Include="Content\img\parks\gtnp.jpg" />
+    <Content Include="Content\img\parks\mrnp.jpg" />
+    <Content Include="Content\img\parks\rmnp.jpg" />
+    <Content Include="Content\img\parks\ynp.jpg" />
+    <Content Include="Content\img\parks\ynp2.jpg" />
+    <Content Include="Content\img\scenery.png" />
+    <Content Include="Content\img\weather\cloudy.png" />
+    <Content Include="Content\img\weather\partlyCloudy.png" />
+    <Content Include="Content\img\weather\rain.png" />
+    <Content Include="Content\img\weather\snow.png" />
+    <Content Include="Content\img\weather\sunny.png" />
+    <Content Include="Content\img\weather\thunderstorms.png" />
+    <Content Include="Content\StyleSheet.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -115,14 +137,21 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\ParkSqlDAL.cs" />
+    <Compile Include="DAL\WeatherSqlDAL.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Parks.cs" />
+    <Compile Include="Models\Weather.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Detail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -132,9 +161,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
-    <Folder Include="Views\Home\" />
-    <Folder Include="Views\Shared\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
