Cleaning up, adding tests

--- a/M3W3D4-csharp-capstone/Capstone.Web.Tests/Capstone.Web.Tests.csproj
+++ b/M3W3D4-csharp-capstone/Capstone.Web.Tests/Capstone.Web.Tests.csproj
@@ -87,7 +87,9 @@
   <ItemGroup>
     <Compile Include="Controllers\HomeControllerTests.cs" />
     <Compile Include="DAL\ParkSqlDALTests.cs" />
+    <Compile Include="DAL\SurveySqlDALTests.cs" />
     <Compile Include="DAL\WeatherSqlDALTest.cs" />
+    <Compile Include="Models\WeatherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
